<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:padding="16dp"
    tools:context=".ConfigurationActivity">


    <TableLayout
        android:id="@+id/tblConfigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stature"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priceT"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pequeño" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_53" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSmall"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 0.03" />


        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mediano" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="53-63" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0.05" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grande" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="63-73" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0.07" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Super Grande" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XL" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_73" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSuperBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0.10" />


        </TableRow>

    </TableLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tblConfigure">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/background_button"
            android:text="@string/save"
            android:textColor="@color/blue1_2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReset"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/background_button"
            android:text="@string/reset"
            android:textColor="@color/blue1_2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>