<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_button"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/blue1_2"
        app:layout_constraintBottom_toTopOf="@+id/btnHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/background_button"
        android:gravity="center"
        android:text="@string/history"
        android:textColor="@color/blue1_2"
        app:layout_constraintBottom_toTopOf="@+id/btnConfiguration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"


        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/background_button"
        android:gravity="center"
        android:text="@string/configuration"
        android:textColor="@color/blue1_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHistory"

        />

</androidx.constraintlayout.widget.ConstraintLayout>